--- a/SSM/SSM0724/.classpath
+++ b/SSM/SSM0724/.classpath
@@ -25,5 +25,6 @@
 			<attribute name="owner.project.facets" value="me.spring"/>
 		</attributes>
 	</classpathentry>
+	<classpathentry kind="lib" path="C:/D/JXIT/lib/c3p0-0.9.1.2.jar"/>
 	<classpathentry kind="output" path="WebRoot/WEB-INF/classes"/>
 </classpath>
