--- a/JSPDemo/WebRoot/WEB-INF/web.xml
+++ b/JSPDemo/WebRoot/WEB-INF/web.xml
@@ -9,4 +9,11 @@
     <welcome-file>default.htm</welcome-file>
     <welcome-file>default.jsp</welcome-file>
   </welcome-file-list>
+  
+  <resource-ref>
+		<description>bi dbcp</description>
+		<res-ref-name>jdbc/jspDemo_dbcp</res-ref-name>
+		<res-type>javax.sql.DataSource</res-type>
+		<res-auth>Container</res-auth>
+	</resource-ref>
 </web-app>
