--- a/SSM/Spring0824/src/log4j.properties
+++ b/SSM/Spring0824/src/log4j.properties
@@ -1,8 +1,7 @@
 # For JBoss: Avoid to setup Log4J outside $JBOSS_HOME/server/default/deploy/log4j.xml!
 # For all other servers: Comment out the Log4J listener in web.xml to activate Log4J.
-log4j.rootLogger=INFO, stdout, logfile
-log4j.logger.NewsNS.doCreate=TRACE
-log4j.logger.cn.mldn.dao.INewsDAO=TRACE
+log4j.rootLogger=DEBUG, stdout, logfile
+log4j.logger.org.lyk.vo.mapping=TRACE 
 
 log4j.appender.stdout=org.apache.log4j.ConsoleAppender
 log4j.appender.stdout.layout=org.apache.log4j.PatternLayout
