--- a/HeaderDemo/HeaderDemo/pom.xml
+++ b/HeaderDemo/HeaderDemo/pom.xml
@@ -32,7 +32,11 @@
 			<version>3.1.0</version>
 			<scope>provided</scope>
 		</dependency>
-
+		<dependency>
+			<groupId>org.apache.struts</groupId>
+			<artifactId>struts2-core</artifactId>
+			<version>2.0.11.2</version>
+		</dependency>
 	</dependencies>
 	<build>
 		<finalName>HeaderDemo</finalName>
