--- a/SSM/AmrProject/AmrProject/src/main/resources/Pages.properties
+++ b/SSM/AmrProject/AmrProject/src/main/resources/Pages.properties
@@ -1,4 +1,4 @@
 login.jsp=/login.jsp
 index.jsp=/pages/index.jsp
-forward.jsp=/pages/common/forward.jsp
-error.jsp=/pages/common/error.jsp
+forward.jsp=/forward.jsp
+error.jsp=/error.jsp
