--- a/SSM/AmrProject/AmrProject/src/main/resources/Pages.properties
+++ b/SSM/AmrProject/AmrProject/src/main/resources/Pages.properties
@@ -2,3 +2,7 @@ login.jsp=/login.jsp
 index.jsp=/pages/index.jsp
 forward.jsp=/forward.jsp
 error.jsp=/error.jsp
+
+#**********ADMIN***********
+admin.add.jsp=/pages/admin/admin_add.jsp
+admin.list.jsp=/pages/admin/admin_list.jsp
