--- a/SSM/AmrProject/AmrProject/src/main/resources/Pages.properties
+++ b/SSM/AmrProject/AmrProject/src/main/resources/Pages.properties
@@ -6,3 +6,6 @@ error.jsp=/error.jsp
 #**********ADMIN***********
 admin.add.jsp=/pages/admin/admin_add.jsp
 admin.list.jsp=/pages/admin/admin_list.jsp
+
+#**********DEPT***********
+dept.list.jsp=/pages/dept/dept_list.jsp
