--- a/SSM/AmrProject/AmrProject/src/main/resources/Pages.properties
+++ b/SSM/AmrProject/AmrProject/src/main/resources/Pages.properties
@@ -9,3 +9,7 @@ admin.list.jsp=/pages/admin/admin_list.jsp
 
 #**********DEPT***********
 dept.list.jsp=/pages/dept/dept_list.jsp
+dept.list.action=pages/dept/list.action
+
+#**********GROUPS***********
+groups.list.jsp=/pages/groups/list.jsp
