--- a/SSM/AmrProject/AmrProject/src/main/resources/Pages.properties
+++ b/SSM/AmrProject/AmrProject/src/main/resources/Pages.properties
@@ -12,4 +12,4 @@ dept.list.jsp=/pages/dept/dept_list.jsp
 dept.list.action=pages/dept/list.action
 
 #**********GROUPS***********
-groups.list.jsp=/pages/groups/list.jsp
+groups.list.jsp=/pages/groups/groups_list.jsp
