--- a/SSM/AmrProject/AmrProject/src/main/resources/Pages.properties
+++ b/SSM/AmrProject/AmrProject/src/main/resources/Pages.properties
@@ -16,3 +16,6 @@ groups.list.jsp=/pages/groups/groups_list.jsp
 
 #**********PAGES***********
 action.list.jsp=/pages/action/action_list.jsp
+
+#**********EMP***********
+emp.add.jsp=/pages/emp/emp_add.jsp
