--- a/SSM/AmrProject/AmrProject/src/main/resources/Pages.properties
+++ b/SSM/AmrProject/AmrProject/src/main/resources/Pages.properties
@@ -1,3 +1,4 @@
+#**********GENERAL***********
 login.jsp=/login.jsp
 index.jsp=/pages/index.jsp
 forward.jsp=/forward.jsp
@@ -6,6 +7,7 @@ error.jsp=/error.jsp
 #**********ADMIN***********
 admin.add.jsp=/pages/admin/admin_add.jsp
 admin.list.jsp=/pages/admin/admin_list.jsp
+admin.add.pre.action=/pages/admin/addPre.action
 
 #**********DEPT***********
 dept.list.jsp=/pages/dept/dept_list.jsp
