--- a/SSM/AmrProject/AmrProject/src/main/resources/Validators.properties
+++ b/SSM/AmrProject/AmrProject/src/main/resources/Validators.properties
@@ -1,3 +1,16 @@
+#**********LOGIN**********
 LoginAction.login=eid:Integer|password:String
+
+#**********GROUPS**********
 GroupsAction.list=did:Integer
+
+#**********ACTION**********
 ActionAction.list=gid:Integer
+ActionAction.checkEid=eid:Integer
+
+#**********ADMIN**********
+AdminAction.checkSalary=salary:Double|lid:Integer
+AdminAction.add=eid:Integer|lid:Integer|name:String|password:String|phone:String|salary:Double|sex:String
+
+#**********EMP**********
+EmpAction.add=eid:Integer|lid:Integer|name:String|password:String|phone:String|salary:Double|sex:String|did:Integer
