--- a/SSM/AmrProject/AmrProject/src/main/resources/Pages.properties
+++ b/SSM/AmrProject/AmrProject/src/main/resources/Pages.properties
@@ -8,6 +8,7 @@ error.jsp=/error.jsp
 admin.add.jsp=/pages/admin/admin_add.jsp
 admin.list.jsp=/pages/admin/admin_list.jsp
 admin.add.pre.action=/pages/admin/addPre.action
+admin.list.action=pages/admin/list.action
 
 #**********DEPT***********
 dept.list.jsp=/pages/dept/dept_list.jsp
@@ -22,3 +23,4 @@ action.list.jsp=/pages/action/action_list.jsp
 #**********EMP***********
 emp.add.jsp=/pages/emp/emp_add.jsp
 emp.add.pre.action=/pages/emp/addPre.action
+emp.list.action=pages/emp/list.action
