--- a/SSM/AmrProject/AmrProject/src/main/resources/Pages.properties
+++ b/SSM/AmrProject/AmrProject/src/main/resources/Pages.properties
@@ -24,3 +24,4 @@ action.list.jsp=/pages/action/action_list.jsp
 emp.add.jsp=/pages/emp/emp_add.jsp
 emp.add.pre.action=/pages/emp/addPre.action
 emp.list.action=pages/emp/list.action
+emp.list.jsp=/pages/emp/emp_list.jsp
