--- a/SSM/AmrProject/AmrProject/src/main/resources/Pages.properties
+++ b/SSM/AmrProject/AmrProject/src/main/resources/Pages.properties
@@ -25,3 +25,4 @@ emp.add.jsp=/pages/emp/emp_add.jsp
 emp.add.pre.action=/pages/emp/addPre.action
 emp.list.action=pages/emp/list.action
 emp.list.jsp=/pages/emp/emp_list.jsp
+emp.edit.jsp=/pages/emp/emp_edit.jsp
