--- a/SSM/AmrProject/AmrProject/src/main/resources/Validators.properties
+++ b/SSM/AmrProject/AmrProject/src/main/resources/Validators.properties
@@ -13,4 +13,6 @@ AdminAction.checkSalary=salary:Double|lid:Integer
 AdminAction.add=eid:Integer|level.lid:Integer|name:String|password:String|phone:String|salary:Double|sex:String
 
 #**********EMP**********
-#EmpAction.add=eid:Integer|level.lid:Integer|name:String|password:String|phone:String|salary:Integer|sex:String|dept.did:Integer
+EmpAction.add=eid:Integer|level.lid:Integer|name:String|password:String|phone:String|salary:Integer|sex:String|dept.did:Integer
+EmpAction.editPre=eid:Integer|cp:Integer
+EmpAction.edit=cp:Integer|eid:Integer|level.lid:Integer|name:String|phone:String|salary:Integer|sex:String|dept.did:Integer|photo:String
