--- a/SpringBoot/SB0921/sb0921/src/main/resources/application.properties
+++ b/SpringBoot/SB0921/sb0921/src/main/resources/application.properties
@@ -1,2 +1,5 @@
 server.port=8080
 spring.messages.basename=i18n/Messages,i18n/Pages,i18n/ApplicationConfiguration
+spring.http.multipart.enabled=true
+spring.http.multipart.max-file-size=10MB
+spring.http.multipart.max-request-size=25MB
